infrastructure/configs/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik
  namespace: ingress-traefik
spec:
  ports:
  - name: dns
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: traefik
  loadBalancerIP: 192.168.1.150
  allocateLoadBalancerNodePorts: false
  type: LoadBalancer
